--- a/detailsFC1.html
+++ b/detailsFC1.html
@@ -49,34 +49,39 @@
             </div>
             <div class="content__description">
                 <p class="p__details">
-                    <span class="destaq">asas</span>Far Cry é um jogo de tiro em primeira pessoa e ficção científica
-                    criado pela empresa Alemã Crytek Studios e publicado pela Francesa
-                    Ubisoft em 23 de Março de 2004. Far Cry vendeu mais de 730 000
-                    unidades em apenas quatro meses de lançamento
+                    <span class="span__tittle">Far Cry</span> é um jogo de tiro em primeira pessoa e ficção científica
+                    criado pela empresa Alemã <span class="span__tittle">Crytek</span>
+                    Studios e publicado pela Francesa <span class="span__tittle">Ubisoft</span> em 23 de Março de 2004.
+                    Far Cry vendeu mais de 730 000
+                    unidades em apenas quatro meses de lançamento. A história do jogo se passa em um pequeno e
+                    misterioso arquipélago na Micronésia, onde <span class="span__tittle">Jack Carver</span>,
+                    ex-soldado das forças especiais, procura por
+                    uma escritora perdida.
                 </p>
                 <p class="p__details">
-                    Em <span class="destaq">Far Cry 5</span> o jogador assume o papel de
-                    um delegado de xerife que foi enviado ao condado fictício de Hope
-                    County, em Montana, para prender Joseph Seed (chamado de
-                    <span class="destaq">"O Pai"</span> por seus seguidores, os
-                    <span class="destaq">"Edenetes"</span>). Seed é um pregador radical
-                    que acredita que foi escolhido por Deus para proteger o povo de Hope
-                    County de um <span class="destaq">"colapso inevitável"</span>. Ele é
-                    o criador e líder da seita cristã "Projeto do Portão do Éden", um
-                    culto apocalíptico religioso e militar.
+                    Far Cry apresenta um enredo curto porém satisfatório para o gênero: o protagonista, <span
+                        class="span__tittle"> Jack Carver</span>, tem
+                    um passado obscuro e é ex-fuzileiro naval dos Estados Unidos. Para arrecadar algum dinheiro, ele se
+                    propõe a escoltar uma jornalista, <span class="span__tittle">Valerie Constantine</span>, a uma ilha
+                    tropical deserta. Os problemas
+                    começam quando um misterioso ataque ao seu barco é feito, deixando-o preso na ilha. Logo, <span
+                        class="span__tittle"> Carver</span>
+                    descobre que as ameaças que pairam na ilha não são apenas humanas, muitos deles são criaturas
+                    monstruosas, criadas por um Doutor chamado <span class="span__tittle"> Krieger</span>, geneticamente
+                    modificadas, uma experiência que
+                    não deu certo. Cabe a ele, então, voltar para a sociedade trazendo consigo a <span
+                        class="span__tittle">Srta. Constantine</span> sã e
+                    salva.
                 </p>
                 <p class="p__details">
-                    Far Cry 5 foi bem recebido pela crítica após o seu lançamento,
-                    apesar de ter sido objeto de controvérsia depois de ter sido
-                    anunciado ao lado de um período de intensos conflitos políticos. Os
-                    críticos elogiaram o design do mundo aberto, o seu visual e trilha
-                    sonora, mas dirigiram críticas para sua história e alguns dos
-                    personagens. O jogo teve um bom desempenho comercial e se tornou o
-                    título mais vendido da franquia, arrecadando mais de 310 milhões de
-                    dólares em sua primeira semana de vendas. Vários pacotes de conteúdo
-                    para download (DLC) foram lançados. Um título de spin-off e
-                    continuação da narrativa, Far Cry: New Dawn, foi lançado em
-                    fevereiro de 2019.
+                    A floresta tropical oferece cobertura e dissimulação, de que o jogador e os inimigos podem tirar
+                    proveito. Inimigos reagem dinamicamente às táticas do jogador e ações. Se alguns pontos isolados de
+                    mercenários de um jogador, ele ocasionalmente corre por ajuda, sinalizando reforços através do uso
+                    de flareguns. Inimigos vão trabalhar juntos para passar a perna, flanquear e fornecer fogo de
+                    supressão, proporcionando-lhes uma vantagem tática sobre o jogador, que, por sua vez, é capaz de
+                    detectar e marcar os inimigos em seu minimap através do uso de binóculos especiais, que também
+                    concede ao jogador a capacidade de escutar as conversas inimigas de longe, apenas apontando o
+                    binóculo na direção dos inimigos.
                 </p>
             </div>
 
@@ -94,21 +99,21 @@
                     <div class="infos">
                         <h4>Lançamento</h4>
                         <p>
-                            <a class="link__infos" href="https://pt.wikipedia.org/wiki/Far_Cry_5" target="_blank">
-                                26 de março de 2018
+                            <a class="link__infos" href="https://pt.wikipedia.org/wiki/Far_Cry" target="_blank">
+                                23 de março de 2004
                             </a>
                         </p>
                     </div>
                     <div class="infos">
                         <h4>Diretor / Produtor / Escritor</h4>
                         <p>
-                            <a class="link__infos" href="https://twitter.com/danhaynow" target="_blank">Dan Hay</a>
+                            <a class="link__infos" href="https://en.wikipedia.org/wiki/Cevat_Yerli"
+                                target="_blank">Cevat Yerli</a>
                             -
-                            <a class="link__infos" href="https://www.linkedin.com/in/darryl-long/?originalSubdomain=sg"
-                                target="_blank">Darryl Long</a>
+                            <a class="link__infos" href="https://www.crytek.com/" target="_blank">Crytek</a>
                             -
-                            <a class="link__infos" href="https://www.bing.com/search?q=drew+Holmes&FORM=AWRE"
-                                target="_blank">Drew Homlmes</a>
+                            <a class="link__infos" href="https://en.wikipedia.org/wiki/Alexis_Nolent"
+                                target="_blank">Alexis Nolent</a>
                         </p>
                     </div>
                 </div>
