--- a/detailsFC2.html
+++ b/detailsFC2.html
@@ -56,7 +56,8 @@
                         Montreal e publicado pela Ubisoft. Foi lançado em 21 de outubro de 2008 na América do Norte,
                         dois
                         dias depois na Europa e Austrália, e em dezembro do mesmo ano no Brasil pela Synergex, para o
-                        Playstation 3, Xbox 360 e Microsoft Windows. Far Cry 2 foi desenvolvido sem qualquer
+                        <span class="destaq"> Playstation 3,</span><span class="destaq"> Xbox 360</span>e <span
+                            class="destaq">Microsoft Windows</span>. Far Cry 2 foi desenvolvido sem qualquer
                         envolvimento da
                         desenvolvedora do jogo original, Crytek.
 
