--- a/detailsFC3.html
+++ b/detailsFC3.html
@@ -52,34 +52,27 @@
 
             <div class="content__description">
                 <p class="p__details">
-                    <span class="destaq">asas</span>Far Cry é um jogo de tiro em primeira pessoa e ficção científica
-                    criado pela empresa Alemã Crytek Studios e publicado pela Francesa
-                    Ubisoft em 23 de Março de 2004. Far Cry vendeu mais de 730 000
-                    unidades em apenas quatro meses de lançamento
+                    Os eventos de <span class="span__tittle">Far Cry 3</span> se desenvolvem em uma ilha tropical
+                    localizada no cruzamento dos oceanos
+                    Índico e Pacífico, e conta a história do americano Jason Brody, que após perder-se na ilha durante
+                    suas férias, tem de salvar os seus amigos sequestrados e escapar dos fatais piratas que lá habitam.
                 </p>
                 <p class="p__details">
-                    Em <span class="destaq">Far Cry 5</span> o jogador assume o papel de
-                    um delegado de xerife que foi enviado ao condado fictício de Hope
-                    County, em Montana, para prender Joseph Seed (chamado de
-                    <span class="destaq">"O Pai"</span> por seus seguidores, os
-                    <span class="destaq">"Edenetes"</span>). Seed é um pregador radical
-                    que acredita que foi escolhido por Deus para proteger o povo de Hope
-                    County de um <span class="destaq">"colapso inevitável"</span>. Ele é
-                    o criador e líder da seita cristã "Projeto do Portão do Éden", um
-                    culto apocalíptico religioso e militar.
+                    <span class="span__tittle">Far Cry 3</span> é um jogo em mundo aberto de tiro na primeira pessoa
+                    (<span class="span__tittle"> RPG
+                    </span>), com elementos de role-playing
+                    game <span class="span__tittle">(RPG)</span>, incluindo pontos de experiência, árvores de
+                    habilidade, e um sistema de crafting. O
+                    jogador tem a capacidade de se esconder atrás de objetos para fugir das linhas de visão e também
+                    para olhar em redor e disparar sem ver. O jogador também tem a capacidade de realizar ataques
+                    furtivos de cima, abaixo ou perto do inimigo.
                 </p>
                 <p class="p__details">
-                    Far Cry 5 foi bem recebido pela crítica após o seu lançamento,
-                    apesar de ter sido objeto de controvérsia depois de ter sido
-                    anunciado ao lado de um período de intensos conflitos políticos. Os
-                    críticos elogiaram o design do mundo aberto, o seu visual e trilha
-                    sonora, mas dirigiram críticas para sua história e alguns dos
-                    personagens. O jogo teve um bom desempenho comercial e se tornou o
-                    título mais vendido da franquia, arrecadando mais de 310 milhões de
-                    dólares em sua primeira semana de vendas. Vários pacotes de conteúdo
-                    para download (DLC) foram lançados. Um título de spin-off e
-                    continuação da narrativa, Far Cry: New Dawn, foi lançado em
-                    fevereiro de 2019.
+                    O diretor da história do jogo,<span class="span__tittle"> Jason Vandenberghe</span>, disse que o
+                    mapa do modo história é cerca de dez
+                    vezes maior do que as edições anteriores do jogo. Os jogadores têm a capacidade de pesquisar e
+                    planejar os seus ataques com combinações furtivas e também de marcar os inimigos com a câmera para
+                    acompanhar o seu movimento depois de saírem da linha de visão do jogador.
                 </p>
             </div>
 
@@ -97,21 +90,19 @@
                     <div class="infos">
                         <h4>Lançamento</h4>
                         <p>
-                            <a class="link__infos" href="" target="_blank">
-                                .......
+                            <a class="link__infos" href="https://pt.wikipedia.org/wiki/Far_Cry_3" target="_blank">
+                                29 de Novembro de 2012
                             </a>
                         </p>
                     </div>
                     <div class="infos">
-                        <h4>Diretor / Produtor / Escritor</h4>
+                        <h4>Diretor / Produtor / Escritores</h4>
                         <p>
-                            <a class="link__infos" href="" target="_blank">.......</a>
+                            <a class="link__infos" href="" target="_blank">Jason Vandenberghe</a>
                             -
-                            <a class="link__infos" href=""
-                                target="_blank">.......</a>
+                            <a class="link__infos" href="https://twitter.com/danhaynow" target="_blank">Dan Hay</a>
                             -
-                            <a class="link__infos" href=""
-                                target="_blank">.......</a>
+                            <a class="link__infos" href="https://www.instagram.com/gamiel/" target="_blank">Jeffrey Yohalem</a>
                         </p>
                     </div>
                 </div>
