--- a/detailsFC6.html
+++ b/detailsFC6.html
@@ -1,202 +1,176 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Info - Far Cry 6</title>
-    <link rel="stylesheet" href="./css/details.css" />
-    <link rel="stylesheet" href="./css/responsive.css" />
-    <link rel="stylesheet" href="./css/animacoes.css" />
-  </head>
 
-  <body>
-    <header>
-      <div class="FC_logo">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Info - Far Cry 6</title>
+  <link rel="stylesheet" href="./css/details.css" />
+  <link rel="stylesheet" href="./css/responsive.css" />
+  <link rel="stylesheet" href="./css/animacoes.css" />
+</head>
+
+<body>
+  <header>
+    <div class="FC_logo">
+      <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
+      <img src="./img/header/FC_logo.png" alt="FC_logo" />
+      <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
+    </div>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./index.html">Coletânea</a></li>
+        <li><a href="#portifolio">Sobre nós</a></li>
+        <li><a href="./login.html">Login</a></li>
+      </ul>
+    </nav>
+
+    <div id="btn-toggle">
+      <div class="menu-toggle">
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+      </div>
+    </div>
+  </header>
+  <section id="bannerdetails">
+    <div>
+      <img src="img/cards/Banner_FC6.png" alt="BannerFC6" />
+    </div>
+  </section>
+
+  <main>
+    <div id="container">
+      <h1 class="tittle_details"> Far Cry <span class="span__tittle">6</span></h1>
+      <div id="stars">
         <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
-        <img src="./img/header/FC_logo.png" alt="FC_logo" />
+        <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
+        <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
+        <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
+        <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
         <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
       </div>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./index.html">Coletânea</a></li>
-          <li><a href="#portifolio">Sobre nós</a></li>
-          <li><a href="./login.html">Login</a></li>
-        </ul>
-      </nav>
+      <section id="content__description">
+        <p class="p__details">
+          Far Cry 6 é ambientado na ilha fictícia de Yara, uma réplica de Cuba. O país é comandado pelo fascista Antón
+          Castillo – vivido pelo ator Giancarlo Esposito e, apesar de parecer um verdadeiro paraíso para se viver, o
+          governo autoritário de seu líder, focado na criação de um medicamento que pode curar diversas doenças –
+          inclusive o câncer.
+          Contrariar Castillo nesse território é o mesmo que assinar a sua sentença de morte, e é esse o perigo que vive
+          o protagonista, Dani Rojas. Você pode escolher viver o papel como homem ou mulher, sem alteração no nome.
+        </p>
+        <p class="p__details">
+          Ao longo do progresso, o personagem se juntará ao grupo de revolucionários para tentar tirar o ditador do
+          poder, ao destruir instalações militares, viver tiroteios com o exército e desbravar os locais mais ocultos de
+          Yara
+        </p>
+        <p class="p__details">
+          Um dos pontos positivos aqui é a presença de localização completa para o Brasil, com menus, legendas e até
+          dublagem em português. A gente sempre ressalta a importância disso para os jogos, pois cria uma identificação
+          com o público local e aumenta a imersão do gamer.
+        </p>
+      </section>
+      <!-- Detalhes do jogo -->
+      <section>
+        <div id="container__info">
+          <div class="infos">
+            <h4>Estúdio</h4>
+            <p>
+              <a class="link__infos" href="https://pt.wikipedia.org/wiki/Ubisoft" target="_blank">
+                Ubisoft
+              </a>
+            </p>
+          </div>
+          <div class="infos">
+            <h4>Lançamento</h4>
+            <p>
+              <a class="link__infos" href="" target="_blank">
+                7 de outubro de 2021
+              </a>
+            </p>
+          </div>
+          <div class="infos">
+            <h4>Diretor / Produtor / Escritor</h4>
+            <p>
+              <a class="link__infos" href="https://www.instagram.com/navface/?hl=pt" target="_blank">Navid Khavari</a>
+              -
+              <a class="link__infos" href="https://www.instagram.com/himynameisyohji/" target="_blank">Omar Bouali</a>
+              -
+              <a class="link__infos" href="https://www.instagram.com/navface/?hl=pt" target="_blank">Navid Khavari</a>
+            </p>
+          </div>
+        </div>
+      </section>
+      <!--Video-->
+      <section>
+        <div class="trailer__tittle">
+          <h1>Trailer</h1>
+        </div>
+        <div class="iframefc">
+          <iframe src="https://www.youtube.com/embed/W-W3E7oYbyQ?start=1" title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+      </section>
+    </div>
+  </main>
+  <footer id="portifolio">
+    <div class="conteiner-integrants">
+      <div class="content-integrants">
+        <h3>Bruno Chaves</h3>
+        <p>
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/HTML">
+            HyperText Markup Language (HTML5)
+          </a>
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/bchavs12/">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconGitHub" />
+          </a>
+          <a href="https://github.com/bchavs12" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconLinkedIN" />
+          </a>
+        </div>
+      </div>
+      <div class="content-integrants">
+        <h3>Daniel Oliveira</h3>
+        <p>
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design">
+            Design Adaptativo
+          </a>
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/daniel-oliveira-24518b204/" target="_blank">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/D4nOliver" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
+          </a>
+        </div>
+      </div>
+      <div class="content-integrants">
+        <h3>Pablo Leandro</h3>
+        <p>
+          <a class="funcao" href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">
+            Cascading Style Sheets 3 (Css)
+          </a>
+        </p>
+        <div>
+          <a href="https://www.linkedin.com/in/pablo-leandro-de-oliveira-ab1190242/" target="_blank">
+            <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
+          </a>
+          <a href="https://github.com/OPablinhoO" target="_blank">
+            <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
+          </a>
+        </div>
+      </div>
+    </div>
+    <div>
+      <span>Checkpoint 2 desenvolvido em junho de 2022</span>
+    </div>
+  </footer>
+</body>
 
-      <div id="btn-toggle">
-        <div class="menu-toggle">
-          <div class="one"></div>
-          <div class="two"></div>
-          <div class="three"></div>
-        </div>
-      </div>
-    </header>
-    <section id="bannerdetails">
-      <div>
-        <img src="img/cards/" alt="BannerFC6" />
-      </div>
-    </section>
-
-    <main>
-      <div id="container">
-        <h1 class="tittle_details"> Far Cry <span class="span__tittle">6</span></h1>
-        <div id="stars">
-          <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
-          <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
-          <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
-          <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
-          <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
-          <img class="stars_logo" src="img/stars/star.svg" alt="stars" />
-        </div>
-        <section id="content__description">
-          <p class="p__details">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus odio pariatur sapiente temporibus architecto tempora assumenda. Nesciunt distinctio provident numquam repudiandae atque excepturi officiis libero voluptatem voluptate, ullam, quas ut?
-          </p>
-          <p class="p__details">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde asperiores iure commodi dolorem? Corporis, pariatur quibusdam magni provident voluptatem tempora omnis tempore, expedita, iure aut asperiores maxime ipsa optio ex?
-          </p>
-          <p class="p__details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam mollitia, quos fuga nulla autem molestiae, ad unde facilis sint minima ab quo ratione reiciendis corporis temporibus! Consequuntur optio nihil quisquam!
-          </p>
-        </section>
-        <!-- Detalhes do jogo -->
-        <section>
-          <div id="container__info">
-            <div class="infos">
-              <h4>Estúdio</h4>
-              <p>
-                <a
-                  class="link__infos"
-                  href="https://pt.wikipedia.org/wiki/Ubisoft"
-                  target="_blank"
-                >
-                  Ubisoft
-                </a>
-              </p>
-            </div>
-            <div class="infos">
-              <h4>Lançamento</h4>
-              <p>
-                <a
-                  class="link__infos"
-                  href=""
-                  target="_blank"
-                >
-                  ...............
-                </a>
-              </p>
-            </div>
-            <div class="infos">
-              <h4>Diretor / Produtor / Escritor</h4>
-              <p>
-                <a
-                  class="link__infos"
-                  href=""
-                  target="_blank"
-                  >......</a
-                >
-                -
-                <a
-                  class="link__infos"
-                  href=""
-                  target="_blank"
-                  >......</a
-                >
-                -
-                <a
-                  class="link__infos"
-                  href=""
-                  target="_blank"
-                  >..........</a
-                >
-              </p>
-            </div>
-          </div>
-        </section>
-        <!--Video-->
-        <section>
-          <div class="trailer__tittle">
-            <h1>Trailer</h1>
-          </div>
-          <div class="iframefc">
-            <iframe src="https://www.youtube.com/embed/W-W3E7oYbyQ?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </section>
-      </div>
-    </main>
-    <footer id="portifolio">
-      <div class="conteiner-integrants">
-        <div class="content-integrants">
-          <h3>Bruno Chaves</h3>
-          <p>
-            <a
-              class="funcao"
-              href="https://developer.mozilla.org/pt-BR/docs/Web/HTML"
-            >
-              HyperText Markup Language (HTML5)
-            </a>
-          </p>
-          <div>
-            <a href="https://www.linkedin.com/in/bchavs12/">
-              <img src="./img/footer/IconLinkedIN.svg" alt="IconGitHub" />
-            </a>
-            <a href="https://github.com/bchavs12" target="_blank">
-              <img src="./img/footer/IconGitHub.svg" alt="IconLinkedIN" />
-            </a>
-          </div>
-        </div>
-        <div class="content-integrants">
-          <h3>Daniel Oliveira</h3>
-          <p>
-            <a
-              class="funcao"
-              href="https://developer.mozilla.org/pt-BR/docs/Learn/CSS/CSS_layout/Responsive_Design"
-            >
-              Design Adaptativo
-            </a>
-          </p>
-          <div>
-            <a
-              href="https://www.linkedin.com/in/daniel-oliveira-24518b204/"
-              target="_blank"
-            >
-              <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
-            </a>
-            <a href="https://github.com/D4nOliver" target="_blank">
-              <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
-            </a>
-          </div>
-        </div>
-        <div class="content-integrants">
-          <h3>Pablo Leandro</h3>
-          <p>
-            <a
-              class="funcao"
-              href="https://developer.mozilla.org/pt-BR/docs/Web/CSS"
-              target="_blank"
-            >
-              Cascading Style Sheets 3 (Css)
-            </a>
-          </p>
-          <div>
-            <a
-              href="https://www.linkedin.com/in/pablo-leandro-de-oliveira-ab1190242/"
-              target="_blank"
-            >
-              <img src="./img/footer/IconLinkedIN.svg" alt="IconLinkedIN" />
-            </a>
-            <a href="https://github.com/OPablinhoO" target="_blank">
-              <img src="./img/footer/IconGitHub.svg" alt="IconGitHub" />
-            </a>
-          </div>
-        </div>
-      </div>
-      <div>
-        <span>Checkpoint 2 desenvolvido em junho de 2022</span>
-      </div>
-    </footer>
-  </body>
 </html>
