--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="container-card">
         <div class="card">
-          <img class="img-card" src="./img/cards/FC_1.jpg" alt="Imagem promocional de Far Cry 1" />
+          <img class="img-card" src="./img/cards/FC1.jpg" alt=" de Far Cry 1" />
           <h4>Far Cry: Classic</h4>
           <p>
             O marinheiro freelance Jack Carver está amaldiçoando o dia em que
