ateração no banner do details

--- a/detailsFC1.html
+++ b/detailsFC1.html
@@ -35,13 +35,10 @@
             </div>
         </div>
     </header>
-    <section id="bannerdetails">
-        <div>
-            <img src="img/cards/banner_FC1.jpg" alt="banner_FC1" />
-        </div>
-    </section>
+    <section id="banner-FC1" class="bannerdetails"></section>
 
     <main>
+        
         <div id="container">
             <h1 class="tittle_details">Far Cry <span class="span__tittle">Classic</span></h1>
             <div id="stars">
