--- a/detailsFC2.html
+++ b/detailsFC2.html
@@ -35,11 +35,7 @@
             </div>
         </div>
     </header>
-    <section id="bannerdetails">
-        <div>
-            <img src="img/cards/Banner_FC2.png" alt="Banner_FC2" />
-        </div>
-    </section>
+    <section id="banner-FC2" class="bannerdetails"></section>
 
     <main>
         <div id="container">
