--- a/detailsFC3.html
+++ b/detailsFC3.html
@@ -35,11 +35,8 @@
             </div>
         </div>
     </header>
-    <section id="bannerdetails">
-        <div>
-            <img src="img/cards/Banner_FC3.png" alt="bannerFC5" />
-        </div>
-    </section>
+    <section Id="banner-FC3" class="bannerdetails"></section>
+
 
     <main>
         <div id="container">
