--- a/detailsFC4.html
+++ b/detailsFC4.html
@@ -35,11 +35,8 @@
             </div>
         </div>
     </header>
-    <section id="bannerdetails">
-        <div>
-            <img src="img/cards/Banner_FC4.png" alt="Banner_FC4" />
-        </div>
-    </section>
+    <section Id="banner-FC4" class="bannerdetails"></section>
+
 
     <main>
         <div id="container">
