--- a/detailsFC6.html
+++ b/detailsFC6.html
@@ -35,11 +35,7 @@
       </div>
     </div>
   </header>
-  <section id="bannerdetails">
-    <div>
-      <img src="img/cards/Banner_FC6.png" alt="BannerFC6" />
-    </div>
-  </section>
+  <section Id="banner-FC6" class="bannerdetails"></section>
 
   <main>
     <div id="container">
