--- a/detailsFC5.html
+++ b/detailsFC5.html
@@ -35,11 +35,7 @@
       </div>
     </div>
   </header>
-  <section id="bannerdetails">
-    <div>
-      <img src="./img/cards/banner_FC5.jpg" alt="bannerFC5">
-    </div>
-  </section>
+  <section Id="banner-FC5" class="bannerdetails"></section>
 
   <main>
     <div id="container">
