--- a/detailsFC3.html
+++ b/detailsFC3.html
@@ -97,7 +97,7 @@
                         <p>
                             <a class="link__infos" href="" target="_blank">Jason Vandenberghe</a>
                             -
-                            <a class="link__infos" href="https://twitter.com/danhaynow" target="_blank">Dan Hay</a>
+                            <a class="link__infos" href="https://www.danhay.net/" target="_blank">Dan Hay</a>
                             -
                             <a class="link__infos" href="https://www.instagram.com/gamiel/" target="_blank">Jeffrey Yohalem</a>
                         </p>
