--- a/detailsFC4.html
+++ b/detailsFC4.html
@@ -49,13 +49,27 @@
             </div>
             <section class="content__description">
                 <p class="p__details">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim corrupti quos, nesciunt molestias pariatur itaque dicta nulla hic ab a maiores minima quae distinctio rerum laudantium maxime expedita molestiae Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium dicta quidem impedit labore laborum exercitationem eos incidunt dolore totam a rem quia earum nemo, vero ullam, aliquam, placeat maxime laudantium?
-                </p>
-                <s class="p__details">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus culpa dolorum beatae. Consectetur suscipit deleniti eum possimus dicta modi asperiores veritatis voluptatum cupiditate sequi doloribus voluptatibus expedita, officiis voluptate fugit.
+                    Far Cry 4 é um jogo em mundo aberto de tiro na primeira pessoa (FPS). E Continua com muitas das
+                    características do Far Cry 3, incluindo os elementos de role-playing game (RPG), pontos de
+                    experiência, árvores de habilidades, um sistema de melhorias artesanal, a possibilidade de caçar
+                    animais e escalar torres para libertar zonas, aumentando assim o mapa. O jogador pode igualmente se
+                    esconder atrás de objetos para fugir das linhas de visão e também para olhar ao redor e disparar sem
+                    ver, bem como a capacidade de realizar ataques furtivos de cima, abaixo ou perto do inimigo.
                 </p>
                 <p class="p__details">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim consequatur ad optio ducimus praesentium delectus fuga porro amet minus laudantium architecto perspiciatis repudiandae odio, quis unde dolorem facilis totam ea!
+                    O tamanho do mapa é relativamente igual ao de Far Cry 3, no entanto, por ser uma zona montanhosa, é
+                    mais denso que o do jogo anterior.No jogo, o modo 'Hardcore', o jogador pode ficar com hipotermia
+                    quando em contato com a água gelada, e ganha doenças quando mordido por animais venenosos. Far Cry 4
+                    tem vários finais, dependendo das escolhas do jogador, mas é "menos claro" que o de Far Cry 3.
+                    Para além da história principal, também existem várias missões secundárias para completar.
+                </p>
+                <p class="p__details">
+                    Em Far Cry 4 o protagonista é Ajay Ghale que regressa a Kyrat (uma nação fictícia fortemente
+                    inspirada em locais da região Himalaia do Nepal), uma zona indomável e selvagem no seu pais de
+                    origem, para espalhar as cinzas da sua falecida mãe. Uma vez lá, vê-se envolvido numa guerra civil
+                    entre os rebeldes (conhecidos como Caminho Dourado) e o regime despótico do auto-intitulado rei, o
+                    sádico Pagan Min (Troy Baker). O jogador tem a possibilidade de escolher de que lado quer
+                    juntar forças, resultando em diferentes finais.
                 </p>
             </section>
             <!-- Detalhes do jogo -->
@@ -64,7 +78,7 @@
                     <div class="infos">
                         <h4>Estúdio</h4>
                         <p>
-                            <a class="link__infos" href="#" target="_blank">
+                            <a class="link__infos" href="https://pt.wikipedia.org/wiki/Ubisoft" target="_blank">
                                 Ubisoft
                             </a>
                         </p>
@@ -72,19 +86,24 @@
                     <div class="infos">
                         <h4>Lançamento</h4>
                         <p>
-                            <a class="link__infos" href="#" target="_blank">
-                                .......
+                            <a class="link__infos" href="https://www.ubisoft.com/pt-br/game/far-cry/far-cry-4"
+                                target="_blank">
+                                18 de Novembro de 2014
                             </a>
                         </p>
                     </div>
                     <div class="infos">
                         <h4>Diretor / Produtor / Escritor</h4>
                         <p>
-                            <a class="link__infos" href="#" target="_blank">.......</a>
+                            <a class="link__infos"
+                                href="https://en.wikipedia.org/wiki/Alex_Hutchinson_(video_game_director)"
+                                target="_blank">Alex Hutchinson</a>
                             -
-                            <a class="link__infos" href="#" target="_blank">.......</a>
+                            <a class="link__infos" href="https://www.danhay.net/" target="_blank" target="_blank">Dan
+                                Hay</a>
                             -
-                            <a class="link__infos" href="#" target="_blank">.........</a>
+                            <a class="link__infos" href="https://en.wikipedia.org/wiki/Lucien_Soulban"
+                                target="_blank">Lucien Soulban</a>
                         </p>
                     </div>
                 </div>
