--- a/detailsFC5.html
+++ b/detailsFC5.html
@@ -35,7 +35,7 @@
       </div>
     </div>
   </header>
-  <section Id="banner-FC5" class="bannerdetails"></section>
+  <section id="banner-FC5" class="bannerdetails"></section>
 
   <main>
     <div id="container">
@@ -99,7 +99,7 @@
 
           <div class="infos">
             <h4> Diretor / Produtor / Escritor </h4>
-            <p> <a class="link__infos" href="https://twitter.com/danhaynow" target="_blank">Dan Hay</a> -
+            <p> <a class="link__infos" href="https://www.danhay.net/" target="_blank">Dan Hay</a> -
               <a class="link__infos" href="https://www.linkedin.com/in/darryl-long/?originalSubdomain=sg"
                 target="_blank">Darryl Long</a> - <a class="link__infos"
                 href="https://www.bing.com/search?q=drew+Holmes&FORM=AWRE" target="_blank">Drew Homlmes</a>
