--- a/detailsFC2.html
+++ b/detailsFC2.html
@@ -56,7 +56,10 @@
                             class="destaq">Microsoft Windows</span>. Far Cry 2 foi desenvolvido sem qualquer
                         envolvimento da
                         desenvolvedora do jogo original, Crytek.
-
+                    </p>
+                </div>
+                <div>
+                    <p class="p__details">
                         Far Cry 2 abandona os aspectos de ficção científica de seu antecessor em favor de uma
                         ambientação
                         mais realista. O jogo se ambienta no território não-linear da África, na qual o jogador se
@@ -67,12 +70,11 @@
                 </div>
                 <div>
                     <p class="p__details">
-                        fsdfsdfsd
-                    </p>
-                </div>
-                <div>
-                    <p class="p__details">
-                        ..........
+                        O jogo é livre, e o jogador pode optar por várias formas para avançar no mundo do jogo e nas
+                        missões, resultando no estilo sandbox. A história avança à medida que o jogador faz missões. O
+                        jogador pode escolher uma grande variedade de veículos para chegar mais rapidamente ao local de
+                        destino ou fazer o seu caminho a pé até o alvo, acomodando estilos de jogos de investidas
+                        diretas na base do inimigo, ou infiltrações sorrateiras em stealth.
                     </p>
                 </div>
             </section>
@@ -91,18 +93,21 @@
                         <h4>Lançamento</h4>
                         <p>
                             <a class="link__infos" href="https://pt.wikipedia.org/wiki/Far_Cry_5" target="_blank">
-                                26 de março de 2018
+                                23 de outubro de 2008
                             </a>
                         </p>
                     </div>
                     <div class="infos">
                         <h4>Diretor / Produtor / Escritor</h4>
                         <p>
-                            <a class="link__infos" href="" target="_blank">.....</a>
+                            <a class="link__infos" href="https://en.wikipedia.org/wiki/Clint_Hocking"
+                                target="_blank">Clint Hocking</a>
                             -
-                            <a class="link__infos" href="" target="_blank">.........</a>
+                            <a class="link__infos" href="https://pt.wikipedia.org/wiki/Ubisoft"
+                                target="_blank">Ubisoft</a>
                             -
-                            <a class="link__infos" href="" target="_blank">......</a>
+                            <a class="link__infos" href="https://en.wikipedia.org/wiki/Clint_Hocking"
+                                target="_blank">Clint Hocking</a>
                         </p>
                     </div>
                 </div>
